# Copyright (c) 2025 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[workspace]
# This is needed to avoid pulling in tokio features in wasm targets, due to new features in version 0.0.18 of the `worker` crate
# See: https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
resolver = "2"
members = ["crates/*", "fuzz"]

[workspace.package]
version = "0.2.0"
authors = [ "Luke Valenta <lvalenta@cloudflare.com>" ]
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/cloudflare/azul"
repository = "https://github.com/cloudflare/azul"
description = "An implementation of the Static Certificate Transparency API on Cloudflare Workers"

[profile.release]
opt-level = "s"
# Recommendations from https://developers.cloudflare.com/workers/languages/rust/#binary-size-wasm-opt:
strip = true
lto = true
codegen-units = 1

[profile.release-symbols]
inherits = "release"
opt-level = 3
debug = 1

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1.1"
console_log = { version = "1.0" }
criterion = { version = "0.5", features = ["html_reports"] }
der = "0.7.9"
ed25519-dalek = "2.1.1"
futures-executor = "0.3.31"
futures-util = "0.3.31"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
itertools = "0.14.0"
jsonschema = "0.30"
length_prefixed = { path = "crates/length_prefixed" }
libfuzzer-sys = "0.4"
log = { version = "0.4"}
p256 = { version = "0.13", features = ["ecdsa"] }
parking_lot = "0.12"
prometheus = "0.14"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11"
serde_json = "1.0"
serde_with = { version = "3.9.0", features = ["base64"] }
sha2 = "0.10"
signature = "2.2.0"
signed_note = { path = "crates/signed_note", version = "0.2.0" }
static_ct_api = { path = "crates/static_ct_api", version = "0.2.0" }
thiserror = "2.0"
tlog_tiles = { path = "crates/tlog_tiles", version = "0.2.0" }
tokio = { version = "1", features = ["sync"] }
url = "2.2"
worker = "0.5.0"
x509-verify = { version = "0.4.4", features = ["md2", "md5", "sha1", "dsa", "rsa", "k256", "p192", "p224", "p256", "p384", "ecdsa", "ed25519", "x509", "pem"] }
x509_util = { path = "crates/x509_util" }
