# Copyright (c) 2025 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[workspace]
# This is needed to avoid pulling in tokio features in wasm targets, due to new features in version 0.0.18 of the `worker` crate
# See: https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
resolver = "2"
members = [
    "crates/bootstrap_mtc_api",
    "crates/bootstrap_mtc_worker",
    "crates/ct_worker",
    "crates/generic_log_worker",
    "crates/integration_tests",
    "crates/length_prefixed",
    "crates/sct_validator",
    "crates/signed_note",
    "crates/signed_note_wasm",
    "crates/static_ct_api",
    "crates/tlog_cosignature",
    "crates/tlog_tiles",
    "crates/tlog_tiles_wasm",
    "crates/tlog_witness",
    "crates/witness_worker",
    "crates/witness_worker/config",
    "crates/x509_util",
    "fuzz",
]
# Exclude two kinds of crates from the default `cargo <cmd>` run:
#   * `integration_tests`: requires a live wrangler dev instance and will
#     hang if run without one. Invoke explicitly with, e.g.
#     `cargo test -p integration_tests --test static_ct_api`.
#   * `fuzz`: cargo-fuzz targets that depend on `libfuzzer-sys` and a
#     nightly toolchain / sanitizer runtime. Invoke explicitly with
#     `cargo fuzz run <target>`.
default-members = [
    "crates/bootstrap_mtc_api",
    "crates/bootstrap_mtc_worker",
    "crates/ct_worker",
    "crates/generic_log_worker",
    "crates/length_prefixed",
    "crates/sct_validator",
    "crates/signed_note",
    "crates/signed_note_wasm",
    "crates/static_ct_api",
    "crates/tlog_cosignature",
    "crates/tlog_tiles",
    "crates/tlog_tiles_wasm",
    "crates/tlog_witness",
    "crates/witness_worker",
    "crates/witness_worker/config",
    "crates/x509_util",
]

[workspace.package]
version = "0.2.0"
authors = ["Luke Valenta <lvalenta@cloudflare.com>"]
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/cloudflare/azul"
repository = "https://github.com/cloudflare/azul"
description = "An implementation of the Static Certificate Transparency API on Cloudflare Workers"

[profile.release]
opt-level = "s"
# Recommendations from https://developers.cloudflare.com/workers/languages/rust/#binary-size-wasm-opt:
strip = true
lto = true
codegen-units = 1

[profile.release-symbols]
inherits = "release"
opt-level = 3
debug = 1

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
base64ct = "1.8.0"
bitcode = { version = "0.6.6", features = ["serde"] }
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1.1"
console_log = { version = "1.0" }
criterion = { version = "0.5", features = ["html_reports"] }
crypto-common = "0.2"
digest = "0.11"
csv = "1.3.1"
generic_log_worker = { path = "crates/generic_log_worker", version = "0.2.0" }
der = { version = "0.8", features = ["oid"] }
# NOTE: Several RustCrypto crates below are pinned to pre-release (RC/pre) versions.
# These were required to unblock ml-dsa 0.1.0-rc.8 (WASM stack overflow fix).
# The RustCrypto ecosystem releases these crates in a coordinated batch; once
# stable releases are published, they should be upgraded together:
#   ed25519-dalek, p256, p384, p521, rsa, signature, x509-cert, pkcs8
# Track: https://github.com/RustCrypto/signatures/issues/1024
ed25519-dalek = { version = "3.0.0-pre.6", features = ["pem"] }
futures-executor = "0.3.31"
futures-util = "0.3.31"
getrandom = { version = "0.4", features = ["wasm_js"] }
hex = "0.4"
itertools = "0.14.0"
jsonschema = "0.30"
length_prefixed = { path = "crates/length_prefixed" }
libfuzzer-sys = "0.4"
log = { version = "0.4" }
bootstrap_mtc_api = { version = "0.2.0", path = "crates/bootstrap_mtc_api" }
p256 = { version = "0.14.0-rc.8", features = ["ecdsa"] }
p384 = { version = "0.14.0-rc.8", features = ["ecdsa"] }
p521 = { version = "0.14.0-rc.8", features = ["ecdsa"] }
parking_lot = "0.12"
prometheus = "0.14"
rand = "0.10"
rand_core = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11"
serde_json = "1.0"
serde_with = { version = "3.9.0", features = ["base64"] }
sha1 = { version = "0.11", features = ["oid"] }
sha2 = "0.11"
signature = "3.0.0-rc.10"
signed_note = { path = "crates/signed_note", version = "0.2.0" }
static_ct_api = { path = "crates/static_ct_api", version = "0.2.0" }
thiserror = "2.0"
tlog_cosignature = { path = "crates/tlog_cosignature", version = "0.2.0" }
tlog_tiles = { path = "crates/tlog_tiles", version = "0.2.0" }
tlog_witness = { path = "crates/tlog_witness", version = "0.2.0" }
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2.2"
wasm-bindgen = "0.2"
worker = "0.7.4"
x509-cert = "0.3.0-rc.4"

x509_util = { path = "crates/x509_util" }
sct_validator = { path = "crates/sct_validator" }

# sct_validator dependencies
rsa = { version = "0.10.0-rc.17", default-features = false, features = ["sha2", "encoding"] }
hashbrown = "0.15"
spki = "0.8"
const-oid = "0.10"
pkcs8 = { version = "0.11.0-rc.11", features = ["pem"] }
