[package]
name = "ct_worker"
readme = "README.md"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "An implementation of c2sp.org/static-ct-api on Cloudflare Workers"
categories = ["cryptography"]
keywords = ["ct", "certificate", "transparency", "crypto", "pki"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1351
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[build-dependencies]
chrono.workspace = true
config = { path = "./config", package = "ct_worker_config" }
jsonschema = "0.26.2"
serde_json.workspace = true
serde.workspace = true
url = "2.5.4"
x509-verify.workspace = true

[dev-dependencies]
rand = { workspace = true, features = ["small_rng"]}
itertools = "0.13.0"
parking_lot = "0.11"
futures-executor = "0.3.31"

[dependencies]
anyhow.workspace = true
base64.workspace = true
byteorder = "1.4"
config = { path = "./config", package = "ct_worker_config" }
console_error_panic_hook = "0.1.1"
console_log = { version = "1.0" }
ed25519-dalek = { workspace = true, features = ["pkcs8"] }
futures-util = "0.3.31"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
log = { version = "0.4"}
p256 = { version = "0.13", features = ["ecdsa"] }
prometheus = "0.13.4"
rand.workspace = true
serde_bytes = "0.11"
serde_json.workspace = true
serde_with.workspace = true
serde-wasm-bindgen = "0.6.5"
serde.workspace = true
sha2.workspace = true
signed_note = "0.2.0"
static_ct_api = { path = "../static_ct_api" } # TODO switch back after next release
thiserror.workspace = true
tlog_tiles = "0.2.0"
tokio = { version = "1", features = ["sync"] }
worker = { version = "0.5.0" }
x509-verify.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

[package.metadata.cargo-machete]
ignored = ["getrandom"]
