[package]
name = "generic_log_worker"
readme = "README.md"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "An implementation of c2sp.org/static-ct-api on Cloudflare Workers"
categories = ["cryptography"]
keywords = ["ct", "certificate", "transparency", "crypto", "pki"]

[dev-dependencies]
rand = { workspace = true, features = ["small_rng"] }
itertools.workspace = true
parking_lot.workspace = true
futures-executor.workspace = true
static_ct_api.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
byteorder.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
hex.workspace = true
log.workspace = true
p256.workspace = true
prometheus.workspace = true
rand.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
sha2.workspace = true
signed_note.workspace = true
thiserror.workspace = true
tlog_tiles.workspace = true
tokio.workspace = true
worker.workspace = true
