[package]
name = "ietf_mtc_api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[features]
# Enable ML-DSA signing key variants. Disabled by default in Worker binaries
# because ML-DSA's large stack frames cause WASM memory out-of-bounds errors
# in the Workers runtime. Enable once the WASM stack issue is resolved.
ml-dsa = ["dep:ml-dsa"]

[dependencies]
base64.workspace = true
byteorder.workspace = true
rand.workspace = true
der.workspace = true
ed25519-dalek.workspace = true
signature.workspace = true
ml-dsa = { workspace = true, optional = true }
pkcs8.workspace = true
length_prefixed.workspace = true
serde.workspace = true
serde_with.workspace = true
sha2.workspace = true
signed_note.workspace = true
thiserror.workspace = true
tlog_tiles.workspace = true
x509-cert.workspace = true

[dev-dependencies]
serde_json.workspace = true
