# Copyright (c) 2025 Cloudflare, Inc. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "integration_tests"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
# These deps are used in tests/ (not src/), which cargo-machete doesn't scan.
ignored = ["bootstrap_mtc_api", "byteorder", "length_prefixed", "log", "tlog_witness", "x509_util"]
homepage.workspace = true
repository.workspace = true
description = "Integration tests for ct_worker (static CT API) and bootstrap_mtc_worker (MTC API)"

[lib]
# rlib (default) — not cdylib, so it runs in native cargo test
name = "integration_tests"

[dependencies]
# Crypto / protocol types reused from the workspace
base64.workspace = true
p256.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
signed_note.workspace = true
static_ct_api.workspace = true
bootstrap_mtc_api.workspace = true
tlog_core.workspace = true
tlog_cosignature.workspace = true
tlog_tiles.workspace = true
tlog_witness.workspace = true
sct_validator.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["base64"] }
anyhow = { workspace = true }
length_prefixed.workspace = true
byteorder = { workspace = true }
chrono.workspace = true
crypto-common.workspace = true
hex.workspace = true
log.workspace = true
rand.workspace = true
x509-cert = { workspace = true, features = ["builder"] }
der.workspace = true
const-oid.workspace = true

# Async HTTP client (native, not wasm)
reqwest = { workspace = true }
tokio = { version = "1", features = ["full"] }
x509_util.workspace = true
