[package]
name = "mtc_api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
byteorder.workspace = true
der.workspace = true
ed25519-dalek.workspace = true
length_prefixed.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
sha2.workspace = true
signed_note.workspace = true
thiserror.workspace = true
tlog_tiles.workspace = true
x509-cert.workspace = true
x509_util.workspace = true
