[package]
name = "static_ct_api"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "An implementation of c2sp.org/static-ct-api"
categories = ["cryptography"]
keywords = ["ct", "certificate", "transparency", "crypto", "pki"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["rlib"]

[dev-dependencies]
ed25519-dalek.workspace = true

[dependencies]
base64.workspace = true
byteorder.workspace = true
chrono.workspace = true
der.workspace = true
length_prefixed.workspace = true
p256.workspace = true
serde.workspace = true
serde_with.workspace = true
sha2.workspace = true
signature.workspace = true
signed_note.workspace = true
thiserror.workspace = true
tlog_tiles.workspace = true
x509-cert.workspace = true
x509-verify.workspace = true
x509_util.workspace = true
